<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    tools:context="com.kts_android.strava.HelloFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/Welcome_image"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_height="170dp"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/welcome_pict"
            android:contentDescription="@string/welcome_pict"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/Welcome_image"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/white"
            android:text="@string/login"
            android:textColor="@color/black"
            app:cornerRadius="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/Welcome_image"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"

            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />
    </RelativeLayout>

</FrameLayout>