<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kts_android.strava.LogFragment"
    android:background="@color/primary">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layout_white"
        app:layout_constraintEnd_toEndOf="@+id/layout_white"
        app:layout_constraintStart_toStartOf="@+id/layout_white"
        tools:ignore="MissingConstraints" />

    <RelativeLayout
        android:id="@+id/layout_white"
        android:layout_width="300dp"

        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/login_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="e-mail"
            android:hint="@string/login_text"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_txt"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="password"
            android:hint="@string/password_text"
            android:inputType="textPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_txt"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="46dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="46dp"
            android:text="@string/sign_in"
            app:cornerRadius="10dp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

